# Speechless

./: .env.prod  .gitignore  bot.py  pyproject.toml  readme.md
core/func/: set_master.py
core/func/chehui/adapters/: onebot_v11.py
core/func/word/: __init__.py  util.py
core/res/: cfg.json
plugins/: send_like.py  set_master.py
plugins/chehui/: __init__.py
res/: cfg.json
