[tool.poetry]
name = "wuyu-bot"
version = "0.1.1"
description = "一个普通的nonebot实现"
authors = ["yeqiu6080 <yeqiu6080@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = {extras = ["fastapi"], version = "^2.3.3"}
nonebot-adapter-onebot = "^2.4.5"
nonebot-plugin-crazy-thursday = "^0.2.8"
nonebot-plugin-alconna = "^0.52.3"
nonebot-plugin-session = "^0.3.2"
nonebot-plugin-status = "^0.9.0"
nonebot-plugin-emojimix = "^0.4.0"
nonebot-plugin-workscore = "^0.1.2"
nonebot-plugin-color = "^0.4.2"


[[tool.poetry.source]]
name = "ali"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[tool.nonebot]
adapters = [{name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}]
plugins = ["nonebot_plugin_crazy_thursday", "nonebot_plugin_status", "nonebot_plugin_emojimix", "nonebot_plugin_workscore", "nonebot_plugin_color"]
plugin_dirs = ["core/func","data/plugins"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



